test/corpus/commands.txt
================================================================================
Command without arguments
================================================================================

\foo bar

--------------------------------------------------------------------------------

(source_file
  (generic_command
    (command_name))
  (text
    (word)))

================================================================================
Command with one curly argument
================================================================================

\foo{bar}

--------------------------------------------------------------------------------

(source_file
  (generic_command
    (command_name)
    (curly_group_generic_arg
      (text
        (word)))))

================================================================================
Command with one curly argument and brackets
================================================================================

\foo{bar}[baz]

--------------------------------------------------------------------------------

(source_file
  (generic_command
    (command_name)
    (curly_group_generic_arg
      (text
        (word)))
    (brack_group_generic_arg
      (text
        (word)))))

================================================================================
Command with incomplete argument
================================================================================

\foo{ \begin{document} \end{document}

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (command_name)
    (generic_environment
      (begin
        (curly_group_text
          (text
            (word))))
      (end
        (curly_group_text
          (text
            (word)))))))

================================================================================
Command with mixed key-value arguments
================================================================================

\hypersetup{
    unicode,
    linktoc=all,
    bookmarksnumbered,
    pdflinkmargin=1.0pt,
    citebordercolor=CiteColor,
    % colorlinks=true,
    pdfauthor=\ThesisAuthor,
    pdftitle=\ThesisTitle,
}

--------------------------------------------------------------------------------

(source_file
  (generic_command
    (command_name)
    (curly_group_generic_arg
      (text
        (word))
      (key_value_pair
        (text
          (word))
        (text
          (word)))
      (text
        (word))
      (key_value_pair
        (text
          (word))
        (text
          (word)))
      (key_value_pair
        (text
          (word))
        (text
          (word)))
      (line_comment)
      (key_value_pair
        (text
          (word))
        (generic_command
          (command_name)))
      (key_value_pair
        (text
          (word))
        (generic_command
          (command_name))))))

================================================================================
Acroynm definition
================================================================================

\newacronym[foo={bar}]{gcd}{GCD}{Greatest Common Divisor}

--------------------------------------------------------------------------------

(source_file
  (acronym_definition
    (brack_group_key_value
      (key_value_pair
        (text
          (word))
        (curly_group
          (text
            (word)))))
    (curly_group_text
      (text
        (word)))
    (curly_group
      (text
        (word)))
    (curly_group
      (text
        (word)
        (word)
        (word)))))

================================================================================
Command definition without default arg
================================================================================

\newcommand{\foo}[1]{#1}

--------------------------------------------------------------------------------

(source_file
  (new_command_definition
    (curly_group_command_name
      (command_name))
    (brack_group_argc
      (argc))
    (curly_group
      (text
        (placeholder)))))

================================================================================
Command definition with default arg
================================================================================

\newcommand{\foo}[1][bar]{#1}

--------------------------------------------------------------------------------

(source_file
  (new_command_definition
    (curly_group_command_name
      (command_name))
    (brack_group_argc
      (argc))
    (brack_group
      (text
        (word)))
    (curly_group
      (text
        (placeholder)))))

================================================================================
Command definition without curly braces
================================================================================

\newcommand\foo[1]{#1}

--------------------------------------------------------------------------------

(source_file
  (new_command_definition
    (command_name)
    (brack_group_argc
      (argc))
    (curly_group
      (text
        (placeholder)))))

================================================================================
Command definition (xparse)
================================================================================

\NewDocumentCommand{\foo}{m}{#1}

--------------------------------------------------------------------------------

(source_file
  (new_command_definition
    (curly_group_command_name
      (command_name))
    (curly_group_spec
      (text
        (word)))
    (curly_group
      (text
        (placeholder)))))

================================================================================
Command definition with optional argument (xparse)
================================================================================

\NewDocumentCommand{\foo}{O{default} m}{#1 #2}

--------------------------------------------------------------------------------

(source_file
  (new_command_definition
    (curly_group_command_name
      (command_name))
    (curly_group_spec
      (text
        (word))
      (curly_group
        (text
          (word)))
      (text
        (word)))
    (curly_group
      (text
        (placeholder)
        (placeholder)))))

================================================================================
Command definition of complex command (xparse)
================================================================================

\NewDocumentCommand{\cancel}{O{mygray}mo}{%
    \tikz[baseline=(N.base)]{
        \node[main node](N){\(#2\)};
        \IfValueT{#3}{\node[label node, gray, anchor=south] at (N.north){#3};}
        \draw[strike out, #1]  (N.south west) -- (N.north east);
    }
}

--------------------------------------------------------------------------------

(source_file
  (new_command_definition
    (curly_group_command_name
      (command_name))
    (curly_group_spec
      (text
        (word))
      (curly_group
        (text
          (word)))
      (text
        (word)))
    (curly_group
      (line_comment)
      (generic_command
        (command_name)
        (brack_group_generic_arg
          (key_value_pair
            (text
              (word))
            (text
              (word))))
        (curly_group_generic_arg
          (generic_command
            (command_name)
            (brack_group_generic_arg
              (text
                (word)
                (word))))
          (text
            (word))
          (curly_group
            (inline_formula
              (text
                (placeholder))))
          (text
            (word)
            (generic_command
              (command_name)
              (curly_group_generic_arg
                (text
                  (placeholder)))
              (curly_group_generic_arg
                (generic_command
                  (command_name)
                  (brack_group_generic_arg
                    (text
                      (word)
                      (word))
                    (text
                      (word))
                    (key_value_pair
                      (text
                        (word))
                      (text
                        (word)))))
                (text
                  (word))
                (text
                  (word))
                (curly_group
                  (text
                    (placeholder)))
                (text
                  (word))))
            (generic_command
              (command_name)
              (brack_group_generic_arg
                (text
                  (word)
                  (word))
                (text
                  (placeholder)))))
          (text
            (word)
            (word))
          (text
            (operator)
            (operator))
          (text
            (word)
            (word))
          (text
            (word)))))))

================================================================================
Author command
================================================================================

\author{John Doe \and Foo Bar}

--------------------------------------------------------------------------------

(source_file
  (author_declaration
    (curly_group_author_list
      (author
        (text
          (word)
          (word)))
      (command_name)
      (author
        (text
          (word)
          (word))))))

================================================================================
Text commands
================================================================================

\intertext{John Doe } \text{Foo Bar}

--------------------------------------------------------------------------------

(source_file
  (text_mode
    (curly_group
      (text
        (word)
        (word))))
  (text_mode
    (curly_group
      (text
        (word)
        (word)))))

================================================================================
Hyperlinks
================================================================================

\url{https://github.com/latex-lsp/tree-sitter-latex}

\href{https://github.com/latex-lsp/tree-sitter-latex}{tree-sitter-latex}

\href{https://github.com/latex-lsp/tree-sitter-latex/issues?q=hyperlink}
                                                          {search ``hyperlink''}

\href{file:///path/to/file_containing spaces, and also commas}{file URI}

--------------------------------------------------------------------------------

(source_file
  (hyperlink
    (curly_group_uri
      (uri)))
  (hyperlink
    (curly_group_uri
      (uri))
    (curly_group
      (text
        (word)
        (operator)
        (word)
        (operator)
        (word))))
  (hyperlink
    (curly_group_uri
      (uri))
    (curly_group
      (text
        (word)
        (word))))
  (hyperlink
    (curly_group_uri
      (uri))
    (curly_group
      (text
        (word)
        (word)))))
